--- a/css/styles.css
+++ b/css/styles.css
@@ -9,13 +9,13 @@
 
 /* Colors */
 :root {
-    --first-color: #4070f4;
-    --second-color: #0e2431;
+    --first-color: #f44040;
+    --second-color: #310e0e;
 }
 
 /* Fonts and Typography*/
 :root {
-    --body-font: 'Poppins, sans-serif';
+    --body-font: Poppins, sans-serif;
     --big-font-size: 2rem;
     --h2-font-size: 1.25rem;
     --normal-font-size: 0.938rem;
@@ -188,8 +188,123 @@ img {
 }
 
 /* HOME */
-
+.home {
+    height: calc(100vh - 3em);
+    row-gap: 1rem;
+}
+.home__data {
+    align-self: center;
+}
+.home__title {
+    font-size: var(--big-font-size);
+    margin-bottom: var(--mb-5);
+}
+.home__title-color {
+    color: var(--first-color);
+}
+.home__social {
+    display: flex;
+    flex-direction: column;
+}
+.home__social-icon {
+    width: max-content;
+    margin-bottom: var(--mb-2);
+    font-size: 1.5rem;
+    color: var(--second-color);
+}
+.home__social-icon:hover {
+    color: var(--first-color);
+}
+.home__img {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width:350px;
+}
 
 /* BUTTONS */
+.button {
+    display: inline-block;
+    background-color: var(--first-color);
+    color: #fff;
+    padding: 1.75rem 2.5rem;
+    font-weight: var(--font-semi);
+    border-radius: .5rem;
+}
+.button:hover {
+    box-shadow: 0 10px 36px rgba(0,0,0,.15);
+}
 
 /* ABOUT */
+.about__contaner {
+    row-gap: 2rem;
+    text-align: center;
+}
+.about__subtitle {
+    margin-bottom: var(--mb-2);
+}
+.about__img {
+    justify-self: center;
+}
+.about__img img{
+    width: 400px;
+    border-radius: .5rem;
+}
+
+/* SKILLS */
+.skills__container {
+    row-gap: 2rem;
+    text-align: center;
+}
+.skills_subtitle {
+    margin-bottom: var(--mb-2);
+}
+.skills__text {
+    margin-bottom: var(--mb-4)
+}
+.skills__data {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    font-weight: var(--font-semi);
+    padding: .5rem 1rem;
+    margin-bottom: var(--mb-4);
+    border-radius: .5rem;
+    box-shadow: 0 4px 25px rgba(14, 36, 49, .15);
+}
+.skills__icon {
+    font-size: 2rem;
+    margin-right: var(--mb-2);
+    color: var(--first-color);
+}
+.skills__names {
+    display: flex;
+    align-items: center;
+}
+.skills__bar {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background-color: var(--first-color);
+    height: .25rem;
+    border-radius: .5rem;
+    z-index: var(--z-back);
+}
+.skills__html {
+    width: 95%;
+}
+.skills__css {
+    width: 85%
+}
+.skills__javascript {
+    width: 70%;
+}
+
+.skills__img {
+    border-radius: .5rem;
+}
+
+/* WORK */
+
+/* CONTACT */
