--- a/css/styles.css
+++ b/css/styles.css
@@ -1,51 +1,8 @@
 /* GOOGLE FONTS */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url(media.css);
+@import url(root.css);
 
-/* VARIABLES CSS */
-:root {
-    --header-height: 3em;
-    --font-semi: 600;
-}
-
-/* Colors */
-:root {
-    --first-color: #f44040;
-    --second-color: #310e0e;
-}
-
-/* Fonts and Typography*/
-:root {
-    --body-font: Poppins, sans-serif;
-    --big-font-size: 2rem;
-    --h2-font-size: 1.25rem;
-    --normal-font-size: 0.938rem;
-}
-
-@media screen and (min-width: 768px) {
-    :root {
-        --big-font-size: 3.5rem;
-        --h2-font-size: 2rem;
-        --normal-font-size: 1rem;
-    }
-}
-
-/* Margins */
-:root {
-    --mb-1: 0.5rem;
-    --mb-2: 1rem;
-    --mb-3: 1.5rem;
-    --mb-4: 2rem;
-    --mb-5: 2.5rem;
-    --mb-6: 3rem;
-}
-
-/* Z-index */
-:root {
-    --z-back: -10;
-    --z-normal: 1;
-    --z-tooltip: 10;
-    --z-fixed: 100;
-}
 
 /* BASE */
 *,::before,::after {
@@ -75,6 +32,14 @@ img {
     max-width: 100%;
     height: auto;
     display: block;
+}
+
+.logo-header-animal {
+    width: 20px
+}
+.div-logo-header {
+    display: flex;
+    gap: .5rem;
 }
 
 /* CLASS CSS */
@@ -131,18 +96,7 @@ img {
     align-items: center;
     font-weight: var(--font-semi);
 }
-@media screen and (max-width: 768px) {
-    .nav__menu {
-        position: fixed;
-        top: var(--header-height);
-        right: -100%;
-        width: 80%;
-        height: 100%;
-        padding: 2rem;
-        background-color: var(--second-color);
-        transition: .5s;
-    }
-}
+
 .nav__item {
     margin-bottom: var(--mb-4);
 }
@@ -300,11 +254,152 @@ img {
 .skills__javascript {
     width: 70%;
 }
-
 .skills__img {
     border-radius: .5rem;
 }
 
 /* WORK */
+.work {
+    text-align: center;
+}
+.work__container {
+    row-gap: 2rem;
+}
+.work__img {
+    box-shadow: 0 4px 25px rgba(14, 36, 49, .15);
+    border-radius: .5rem;
+    overflow: hidden;
+}
+.work__img img{
+    transition: 1s;
+    cursor: pointer;
+}
+.work__img img:hover{
+    transform: scale(1.1);
+}
 
 /* CONTACT */
+.contact__input {
+    width:100%;
+    font-size: var(--normal-font-size);
+    font-weight: var(--font-semi);
+    padding: 1rem;
+    border-radius: .5rem;
+    border: 1.5px solid var(--second-color);
+    outline:none;
+    margin-bottom: var(--mb-4);
+}
+.contact__button {
+    display:block;
+    border:none;
+    outline: none;
+    font-size: var(--normal-font-size);
+    cursor: pointer;
+    margin-left:auto;
+}
+
+/* FOOTER */
+.footer {
+    background-color: var(--second-color);
+    color: #fff;
+    text-align: center;
+    font-weight: var(--font-semi);
+    padding: 2rem 0;
+}
+.footer__title {
+    font-size: 2rem;
+    margin-bottom: var(--mb-4)
+}
+.footer__icon {
+    font-size: 1.5rem;
+    color: #fff;
+    margin:0 var(--mb-2);
+}
+
+
+
+
+
+@media screen and (min-width: 768px) {
+    body {
+        margin: 0;
+    }
+    .section {
+        padding-top: 4rem;
+        padding-bottom: 3rem;
+    }
+    .section-title {
+        margin-bottom: var(--mb-6);
+    }
+    .section-title::after {
+        width: 80px;
+        top: 3rem;
+    }
+    .nav {
+        height: calc(--header-height) + 1rem;
+    }
+    .nav__list{
+        display: flex;
+        padding-top: 0;
+    }
+    .nav__item{
+        margin-left: var(--mb-6);
+        margin-bottom: 0;
+    }
+    .nav__toggle {
+        display: none;
+    }
+    .nav__link {
+        color: var(--second-color)
+    }
+
+    .home {
+        height: 100vh;
+    }
+    .home__data {
+        align-self: flex-end;
+    }
+    .home__social {
+        padding-top: 0;
+        padding-bottom: 2.5rem;
+        flex-direction: row;
+        align-self: flex-end;
+    }
+    .home__social-icon {
+        margin-bottom: 0;
+        margin-right: var(--mb-4);
+    }
+    .home__img{
+        width: 457px;
+        bottom: 15%
+    }
+    .about__contaner, .skills__container {
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+        text-align: initial;
+    }
+    .about__img img {
+        width: 400px;
+    }
+    .work__container {
+        grid-template-columns: repeat(3,1fr);
+        grid-template-rows: repeat(2,1fr);
+        columns-gap: 2rem;
+    }
+    .contact__form{
+        width: 360px;
+    }
+    .contact__container {
+        justify-items: center;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .bd-grid {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .home__img {
+        right: 10%;
+    }
+}
