--- a/css/styles.css
+++ b/css/styles.css
@@ -384,7 +384,7 @@ img {
     .work__container {
         grid-template-columns: repeat(3,1fr);
         grid-template-rows: repeat(2,1fr);
-        columns-gap: 2rem;
+        column-gap: 2rem;
     }
     .contact__form{
         width: 360px;
